recursion.lessons.recursion.koch.Koch.scala.error
Koch:13: error: not found: type double
	var long:double=length
                 ^